# LTGDroid

./: .gitignore  README.md  explore.py  explore_recorder.py  main.py  pyproject.toml  visualize.py
bugs/: APhotoManager#116.json  ActivityDiary#118.json  ActivityDiary#285.json  AmazeFileManager#1796.json  AmazeFileManager#4185.json  AndrOBD#144.json  Anki-Android#10584.json  Anki-Android#4586.json  Anki-Android#4707.json  Anki-Android#4977.json  Anki-Android#5638.json  Anki-Android#5753.json  Anki-Android#6432.json  AntennaPod#7611.json  AntennaPod#7866.json  AnyMemo#422.json  AnyMemo#440.json  AsciiCam#17.json  Birthdroid#13.json  FastAdapter#394.json  FirefoxLite#5085.json  KISS#1481.json  LibreNews-Android#22.json  LibreNews-Android#23.json  LocalMaterialNotes#327.json  LocalMaterialNotes#385.json  LocalMaterialNotes#415.json  LocalMaterialNotes#416.json  MaterialFBook#224.json  MaterialFiles#1281.json  MaterialFiles#1392.json  Memento-Calendar#169.json  Memento-Calendar#7.json  NewPipe#11914.json  NewPipe#11915.json  NewsBlur#1053.json  NotallyX#517.json  NotallyX#569.json  NotallyX#609.json  Omni-Notes#377.json  (+35 more)
frame/: action.py  apk.py  avd_controller.py  device.py  limiter.py  llm.py  recorder.py  scene.py  transition.py  utils.py  widget.py
resource/web/: index.html
resource/web/assets/: main-B2X7--N-.css  main-B9jTkylP.js
tasks/: __init__.py  utils.py
working/apk/: APhotoManager_v0.6.4.180314.apk  AndrOBD_v2.0.7.apk  Birthdroid_v0.6.3.apk  OpenCalc_v3.1.0-beta1.apk  URLCheck_v3.4.apk
